--- a/dist.ini
+++ b/dist.ini
@@ -6,13 +6,12 @@ name    = Log-ger-Output-Composite
 :version=0.55
 
 [Prereqs / TestRequires]
-Log::ger=0.005
-Log::ger::Output=0.005
-Log::ger::Util=0.005
+Log::ger=0.007
+Log::ger::Output=0.007
+Log::ger::Util=0.007
 Test::More=0.98
 
 [Prereqs]
-;perl = 5.010001
 strict=0
 warnings=0
-
+Data::Dmp=0.21
