--- a/dist.ini
+++ b/dist.ini
@@ -6,8 +6,13 @@ name    = Log-ger-Output-Composite
 :version=0.55
 
 [Prereqs / TestRequires]
-Log::ger=0.010
+Log::ger=0.011
+Log::ger::Layout=0
+;!lint_prereqs assume-used "undetected, used via LGP"
+Log::ger::Layout::Pattern=0
 Log::ger::Output=0.007
+;!lint_prereqs assume-used "undetected, used via LGO"
+Log::ger::Output::String=0
 Log::ger::Util=0.008
 Test::More=0.98
 
@@ -15,5 +20,3 @@ Test::More=0.98
 strict=0
 warnings=0
 Data::Dmp=0.21
-DD=0
-
