--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.004
+version = 0.005
 
 name    = Log-ger-Output-Composite
 
@@ -7,11 +7,12 @@ name    = Log-ger-Output-Composite
 
 [Prereqs / TestRequires]
 Log::ger=0.011
+;!lint_prereqs assume-used "undetected"
 Log::ger::Layout=0
-;!lint_prereqs assume-used "undetected, used via LGP"
+;!lint_prereqs assume-used "undetected"
 Log::ger::Layout::Pattern=0
 Log::ger::Output=0.007
-;!lint_prereqs assume-used "undetected, used via LGO"
+;!lint_prereqs assume-used "undetected"
 Log::ger::Output::String=0
 Log::ger::Util=0.008
 Test::More=0.98
