--- a/dist.ini
+++ b/dist.ini
@@ -1,16 +1,22 @@
-version = 0.017
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
+
+version = 0.018
 
 name    = Log-ger-Output-Composite
 
 [@Author::PERLANCAR]
-:version=0.598
+:version=0.610
 
 [Prereqs / TestRequires]
-Log::ger=0.037
+Log::ger=0.038
 ;!lint_prereqs assume-used "undetected"
 Log::ger::Layout=0
 ;!lint_prereqs assume-used "undetected"
-Log::ger::Layout::Pattern=0.007
+Log::ger::Layout::Pattern=0.008
 Log::ger::Output=0.007
 ;!lint_prereqs assume-used "undetected"
 Log::ger::Output::String=0
@@ -19,6 +25,6 @@ Test::More=0.98
 [Prereqs]
 strict=0
 warnings=0
-Data::Dmp=0.240
+Data::Dmp=0.242
 Log::ger::Util=0.037
 
